# docs/swagger.json
@@ -36,19 +36,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.AuthResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.ErrorResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.ErrorResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     }
                 }
@@ -81,19 +81,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.AuthResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.ErrorResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.ErrorResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     }
                 }
@@ -110,7 +110,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Зарегистрировать новго пользователя",
+                "summary": "Зарегистрировать пользователя",
                 "parameters": [
                     {
                         "description": "Данные пользователя",
@@ -126,13 +126,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.AuthResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.AuthResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.ErrorResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     }
                 }
@@ -858,13 +858,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.UserResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.UserResponseWithCourses"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_user.ErrorResponse"
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     }
                 }
@@ -872,6 +872,23 @@
         }
     },
     "definitions": {
+        "diprec_api_internal_domain.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "expiresAt": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/diprec_api_internal_domain.UserResponse"
+                }
+            }
+        },
         "diprec_api_internal_domain.CourseResponse": {
             "type": "object",
             "properties": {
@@ -1000,6 +1017,70 @@
                 }
             }
         },
+        "diprec_api_internal_domain.UserResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "patronymic": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "diprec_api_internal_domain.UserResponseWithCourses": {
+            "type": "object",
+            "properties": {
+                "courses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/diprec_api_internal_domain.CourseResponse"
+                    }
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "patronymic": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "internal_transport_http_course.CreateCourseDTO": {
             "type": "object",
             "properties": {
@@ -1096,23 +1177,6 @@
                 }
             }
         },
-        "internal_transport_http_user.AuthResponse": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "expiresAt": {
-                    "type": "string"
-                },
-                "refreshToken": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/internal_transport_http_user.UserResponse"
-                }
-            }
-        },
         "internal_transport_http_user.CreateUserDTO": {
             "type": "object",
             "required": [
@@ -1140,14 +1204,6 @@
                 }
             }
         },
-        "internal_transport_http_user.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "internal_transport_http_user.LoginUserDTO": {
             "type": "object",
             "required": [
@@ -1171,32 +1227,6 @@
             ],
             "properties": {
                 "refreshToken": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_transport_http_user.UserResponse": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "patronymic": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
